--- a/StudentRegistrationLab.html
+++ b/StudentRegistrationLab.html
@@ -9,14 +9,14 @@
       max-width: 600px;
       margin: 40px auto;
       padding: 20px;
-      background: #E6E6FA; /* fundo roxo pastel */
+      background: #E6E6FA;
       border-radius: 10px;
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     }
 
     h2 {
       text-align: center;
-      color: #4B0082; /* roxo escuro */
+      color: #4B0082; 
     }
 
     label {
@@ -29,14 +29,14 @@
       width: 100%;
       padding: 10px;
       margin-top: 5px;
-      border: 1px solid #D8BFD8; /* lilás suave */
+      border: 1px solid #D8BFD8;
       border-radius: 6px;
       background-color: #fdfbff;
     }
 
     input:focus, select:focus, textarea:focus {
       outline: none;
-      border-color: #BA55D3; /* roxo vibrante */
+      border-color: #BA55D3; 
       box-shadow: 0 0 5px rgba(186, 85, 211, 0.5);
     }
 
@@ -53,7 +53,7 @@
     button {
       margin-top: 20px;
       padding: 12px;
-      background-color: #BA55D3; /* roxo médio */
+      background-color: #BA55D3; 
       color: white;
       border: none;
       border-radius: 6px;
@@ -63,7 +63,7 @@
     }
 
     button:hover {
-      background-color: #9932CC; /* roxo mais escuro */
+      background-color: #9932CC; 
     }
   </style>
 </head>
